--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -129,3 +129,14 @@ ul {
 		font-size: 18px;
 	}
 }
+.servises{
+	display: none;
+	position: absolute;
+	width: 260px;
+	width: 100%;
+	height: 205px;
+}
+.dermatolog{
+	display: none;
+	position: absolute;
+}
