--- a/test-colaees/css/style.css
+++ b/test-colaees/css/style.css
@@ -561,6 +561,19 @@ ul {
   font-size: 18px;
 }
 
+.servises {
+  display: none;
+  position: absolute;
+  width: 260px;
+  width: 100%;
+  height: 205px;
+}
+
+.dermatolog {
+  display: none;
+  position: absolute;
+}
+
 @media (max-width: 767px) {
   body span {
     font-size: 15px;
