--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -17,6 +17,7 @@
 
 
 
+
 body {
 	font-size: 30px;
 
@@ -77,35 +78,148 @@ ul {
 
 	.header__menu {
 		padding-top: 15px;
+		position: relative;
+
+
 
 		ul {
 			display: flex;
 			font-size: 14px;
 			font-family: 'HelveticaNeueCyr-Thin';
-			font-weight: 100;
+			font-weight: bold;
+
+			a {
+				color: #363636;
+				text-decoration: none;
+				font-size: 14px;
+				transition: all 0.3s ease;
+
+				&::after {
+					content: "";
+					width: 100%;
+					height: 2px;
+					display: none;
+					background-color: #78b660;
+					transition: all .3s;
+				}
+
+				&:hover {
+					&::after {
+						display: block;
+					}
+				}
+			}
 
 			li {
 				margin-right: 35px;
 				margin-bottom: 2px;
-				a {
-					color: #363636;
-					text-decoration: none;
-					
-					font-size: 14px;
 
-					&::after {
+				.servises {
+					&::before {
 						content: "";
-						width: 100%;
-						height: 2px;
-						display: none;
-						background-color: #78b660;
-						transition: all .3s;
+						border: 16px solid transparent;
+						border-bottom: 8px solid #dbebd3;
+						position: absolute;
+						top: -22px;
+						left: 31px;
 					}
 
-					&:hover {
-						&::after {
-							display: block;
+					li {
+						margin-right: 0;
+						margin-left: 0;
+
+						&:first-child {
+							margin-top: 5px;
 						}
+
+						margin-left: -39px;
+						cursor: pointer;
+
+						&:hover {
+							background-color: #f2f2f2;
+						}
+
+						a {
+							margin-left: 15px;
+
+							&::after {
+								display: none;
+							}
+						}
+					}
+
+					width: 260px;
+					display: none;
+					position: absolute;
+					max-width: 216px;
+					height: 210px;
+					background-color: #dbebd3;
+					font-size: 14px;
+					line-height: 26px;
+					top: 54px;
+					left: 230px;
+				}
+
+				.derma {
+					display: none;
+					position: absolute;
+				}
+			}
+		}
+
+		.header__list {
+			.header__link-servises {
+
+				&::before {
+					content: url(../img/Polygon_1.png);
+					position: absolute;
+					height: 50px;
+					right: 334px;
+					top: 26px;
+
+				}
+			}
+
+			.header__item-derma {
+				&:hover {
+					&::after {
+						content: url(../img/Shape_26_copy_17.png);
+						position: absolute;
+						top: 36px;
+						left: 218px;
+					}
+
+					.derma {
+						display: block;
+						width: 250px;
+						background-color: rgba($color: #f2f2f2, $alpha: 0.9);
+						left: 250px;
+						height: 210px;
+						top: 0;
+
+						li {
+							height: 25px;
+							background-color: transparent;
+
+							a {
+								&:hover {
+									&::after {
+										display: block;
+									}
+								}
+							}
+						}
+
+					}
+				}
+			}
+
+			.header__item-servises {
+				height: 30px;
+
+				&:hover {
+					.servises {
+						display: block;
 					}
 				}
 			}
@@ -125,18 +239,102 @@ ul {
 	font-weight: 500;
 	justify-content: center;
 	line-height: 15px;
+
 	span {
 		font-size: 18px;
 	}
 }
-.servises{
-	display: none;
-	position: absolute;
-	width: 260px;
-	width: 100%;
-	height: 205px;
+
+.flower {
+	background-image: url(../img/big-flower.png);
+	margin-top: 200px;
+	width: 710px;
+	height: 596px;
+	position: relative;
+
+	.flower__text {
+		max-width: 360px;
+		position: absolute;
+		position: relative;
+
+		h1 {
+			width: 279px;
+			height: 27px;
+			color: #363636;
+			font-family: 'HelveticaNeueCyr-Thin';
+			font-size: 30px;
+			font-weight: 700;
+		}
+
+		p {
+			width: 360px;
+			font-family: 'HelveticaNeueCyr-Thin';
+			font-size: 23px;
+			line-height: 33px;
+		}
+
+		span {
+			font-size: 52px;
+			color: #92c47f;
+			font-family: 'HelveticaNeueCyr-Bold';
+			position: absolute;
+			top: 80px;
+			left: 160px;
+		}
+	}
 }
-.dermatolog{
-	display: none;
-	position: absolute;
+
+.girl {
+	background-image: url(../img/girl.png);
+	margin-top: 150px;
+	width: 448px;
+	height: 440px;
+}
+
+.main {
+	margin-top: -100px;
+	display: flex;
+}
+
+.slider__wrapper {
+	position: relative;
+	margin-left: 160px;
+	&::before {
+		content: url(../img/Shape_57_copy.png);
+		position: absolute;
+		left: -48px;
+		top: 0;
+	}
+
+	&::after {
+		content: url(../img//Shape_57.png);
+		position: absolute;
+		top: 7px;
+		right: 147px;
+	}
+}
+
+// footer
+.footer__title {
+	height: 28px;
+	color: #363636;
+	font-family: 'HelveticaNeueCyr-Thin';
+	font-size: 30px;
+	font-weight: 400;
+	text-align: center;
+}
+
+.footer__text {
+
+	color: #363636;
+	font-family: 'HelveticaNeueCyr-Thin';
+	font-size: 14px;
+	font-weight: bold;
+	line-height: 26px;
+
+	letter-spacing: 0.7px;
+}
+
+.footer {
+	margin-top: -158px;
 }
