--- a/test-colaes/css/style.css
+++ b/test-colaes/css/style.css
@@ -428,7 +428,7 @@ template {
   font-family: 'HelveticaNeueCyr-Thin';
   src: url("../fonts/HelveticaNeueCyr-Thin.eot");
   src: local("☺"), url("../fonts/HelveticaNeueCyr-Thin.woff") format("woff"), url("../fonts/HelveticaNeueCyr-Thin.ttf") format("truetype"), url("../fonts/HelveticaNeueCyr-Thin.svg") format("svg");
-  font-weight: 100;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -500,6 +500,7 @@ ul {
 
 .header__body .header__menu {
   padding-top: 15px;
+  position: relative;
 }
 
 .header__body .header__menu ul {
@@ -508,21 +509,19 @@ ul {
   display: flex;
   font-size: 14px;
   font-family: 'HelveticaNeueCyr-Thin';
-  font-weight: 100;
+  font-weight: bold;
 }
 
-.header__body .header__menu ul li {
-  margin-right: 35px;
-  margin-bottom: 2px;
-}
-
-.header__body .header__menu ul li a {
+.header__body .header__menu ul a {
   color: #363636;
   text-decoration: none;
   font-size: 14px;
+  -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
-.header__body .header__menu ul li a::after {
+.header__body .header__menu ul a::after {
   content: "";
   width: 100%;
   height: 2px;
@@ -533,7 +532,103 @@ ul {
   transition: all .3s;
 }
 
-.header__body .header__menu ul li a:hover::after {
+.header__body .header__menu ul a:hover::after {
+  display: block;
+}
+
+.header__body .header__menu ul li {
+  margin-right: 35px;
+  margin-bottom: 2px;
+}
+
+.header__body .header__menu ul li .servises {
+  width: 260px;
+  display: none;
+  position: absolute;
+  max-width: 216px;
+  height: 210px;
+  background-color: #dbebd3;
+  font-size: 14px;
+  line-height: 26px;
+  top: 54px;
+  left: 230px;
+}
+
+.header__body .header__menu ul li .servises::before {
+  content: "";
+  border: 16px solid transparent;
+  border-bottom: 8px solid #dbebd3;
+  position: absolute;
+  top: -22px;
+  left: 31px;
+}
+
+.header__body .header__menu ul li .servises li {
+  margin-right: 0;
+  margin-left: 0;
+  margin-left: -39px;
+  cursor: pointer;
+}
+
+.header__body .header__menu ul li .servises li:first-child {
+  margin-top: 5px;
+}
+
+.header__body .header__menu ul li .servises li:hover {
+  background-color: #f2f2f2;
+}
+
+.header__body .header__menu ul li .servises li a {
+  margin-left: 15px;
+}
+
+.header__body .header__menu ul li .servises li a::after {
+  display: none;
+}
+
+.header__body .header__menu ul li .derma {
+  display: none;
+  position: absolute;
+}
+
+.header__body .header__menu .header__list .header__link-servises::before {
+  content: url(../img/Polygon_1.png);
+  position: absolute;
+  height: 50px;
+  right: 334px;
+  top: 26px;
+}
+
+.header__body .header__menu .header__list .header__item-derma:hover::after {
+  content: url(../img/Shape_26_copy_17.png);
+  position: absolute;
+  top: 36px;
+  left: 218px;
+}
+
+.header__body .header__menu .header__list .header__item-derma:hover .derma {
+  display: block;
+  width: 250px;
+  background-color: rgba(242, 242, 242, 0.9);
+  left: 250px;
+  height: 210px;
+  top: 0;
+}
+
+.header__body .header__menu .header__list .header__item-derma:hover .derma li {
+  height: 25px;
+  background-color: transparent;
+}
+
+.header__body .header__menu .header__list .header__item-derma:hover .derma li a:hover::after {
+  display: block;
+}
+
+.header__body .header__menu .header__list .header__item-servises {
+  height: 30px;
+}
+
+.header__body .header__menu .header__list .header__item-servises:hover .servises {
   display: block;
 }
 
@@ -561,17 +656,98 @@ ul {
   font-size: 18px;
 }
 
-.servises {
-  display: none;
-  position: absolute;
-  width: 260px;
-  width: 100%;
-  height: 205px;
+.flower {
+  background-image: url(../img/big-flower.png);
+  margin-top: 200px;
+  width: 710px;
+  height: 596px;
+  position: relative;
 }
 
-.dermatolog {
-  display: none;
+.flower .flower__text {
+  max-width: 360px;
   position: absolute;
+  position: relative;
+}
+
+.flower .flower__text h1 {
+  width: 279px;
+  height: 27px;
+  color: #363636;
+  font-family: 'HelveticaNeueCyr-Thin';
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.flower .flower__text p {
+  width: 360px;
+  font-family: 'HelveticaNeueCyr-Thin';
+  font-size: 23px;
+  line-height: 33px;
+}
+
+.flower .flower__text span {
+  font-size: 52px;
+  color: #92c47f;
+  font-family: 'HelveticaNeueCyr-Bold';
+  position: absolute;
+  top: 80px;
+  left: 160px;
+}
+
+.girl {
+  background-image: url(../img/girl.png);
+  margin-top: 150px;
+  width: 448px;
+  height: 440px;
+}
+
+.main {
+  margin-top: -100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slider__wrapper {
+  position: relative;
+  margin-left: 160px;
+}
+
+.slider__wrapper::before {
+  content: url(../img/Shape_57_copy.png);
+  position: absolute;
+  left: -48px;
+  top: 0;
+}
+
+.slider__wrapper::after {
+  content: url(../img//Shape_57.png);
+  position: absolute;
+  top: 7px;
+  right: 147px;
+}
+
+.footer__title {
+  height: 28px;
+  color: #363636;
+  font-family: 'HelveticaNeueCyr-Thin';
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.footer__text {
+  color: #363636;
+  font-family: 'HelveticaNeueCyr-Thin';
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 26px;
+  letter-spacing: 0.7px;
+}
+
+.footer {
+  margin-top: -158px;
 }
 
 @media (max-width: 767px) {
@@ -583,3 +759,7 @@ ul {
     font-size: 20px;
   }
 }
+
+.webp .flower{ background-image: url(../img/big-flower.webp); }
+
+.webp .girl{ background-image: url(../img/girl.webp); }
